[package]
name = "deus"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-deus.json"

[package.metadata.bootloader]
kernel-stack-address = "0xFFFFFF8000000000"
kernel-stack-size = 256
physical-memory-offset = "0xFFFF800000000000"

[features]

default = []

[dependencies]
bootloader = { version = "0.8", features = ["map_physical_memory"] }
spin = "0.5"
volatile = "0.2"
bitflags = "1.0"
linked_list_allocator = "0.7"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
pinecone = "0.2"
