[package]
name = "deus"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]

[package.metadata.bootloader]
kernel-stack-address = "0xFFFFFF8000000000"
kernel-stack-size = 256
physical-memory-offset = "0xFFFF800000000000"

[features]

default = []

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
spin = "0.9.8"
volatile = "0.2"
bitflags = "1.0"
linked_list_allocator = "0.10"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
pinecone = "0.2.5"
x86 = "0.52"
